add: driver logic

--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
 		</style>
 	</head>
 	<body>
-		<div id="previous"></div>
 		<div id="root"></div>
-		<script src="./reactive.js"></script>
+		<script src="./src/index.js"></script>
 	</body>
 </html>
