chore: add btn styling to index.html

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
 				line-height: 1.6rem;
 				text-align: center;
 			}
+			button {
+				padding: 1em;
+				font-size: 1em;
+				margin: 2em;
+				cursor: pointer;
+			}
 		</style>
 	</head>
 	<body>
