add: props and refresh logic attached to window, hack for now

--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
 				text-align: center;
 			}
 			button {
-				padding: 1em;
-				font-size: 1em;
+				padding: 0.5em;
+				font-size: 0.8em;
 				margin: 2em;
+				border: transparent;
+				border-radius: 5px;
 				cursor: pointer;
 			}
 		</style>
