--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
 				border-radius: 5px;
 				cursor: pointer;
 			}
+			textarea {
+				width: 400px;
+				height: 2em;
+				border: transparent;
+				border-radius: 5px;
+				font-size: 1em;
+				padding: 0.5em;
+			}
 		</style>
 	</head>
 	<body>
