--- a/index.html
+++ b/index.html
@@ -5,62 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Reactive</title>
-		<style>
-			@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
-			:root {
-				--darkBackground: rgb(6, 6, 48);
-				--textColor: rgb(5, 194, 201);
-			}
-			html {
-				font-family: 'Montserrat', sans-serif;
-				letter-spacing: 1px;
-				font-size: 1.4rem;
-			}
-			body {
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				height: 100vh;
-				width: 100vw;
-				background-color: var(--darkBackground);
-				color: var(--textColor);
-			}
-			section {
-				display: flex;
-				flex-direction: column;
-				align-items: baseline;
-				justify-content: center;
-				width: 100%;
-			}
-			section div {
-				text-align: center;
-				width: 100%;
-			}
-			p {
-				width: 400px;
-				height: 400px;
-				padding: 1em;
-				margin: auto;
-				line-height: 1.6rem;
-				text-align: center;
-			}
-			button {
-				padding: 0.5em;
-				font-size: 0.8em;
-				margin: 2em;
-				border: transparent;
-				border-radius: 5px;
-				cursor: pointer;
-			}
-			textarea {
-				width: 400px;
-				height: 2em;
-				border: transparent;
-				border-radius: 5px;
-				font-size: 1em;
-				padding: 0.5em;
-			}
-		</style>
+		<link rel="stylesheet" href="./index.css" />
 	</head>
 	<body>
 		<div id="root"></div>
