--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Random Facts Generator!</title>
 		<link rel="stylesheet" href="./index.css" />
+		<link
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+			rel="stylesheet"
+		/>
 		<script defer src="./src/index.js"></script>
 	</head>
 	<body>
